--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,155 @@
-/* Add CSS styling here */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+    
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+body {
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+header {
+    background-color: aquamarine;
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+header h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 2rem;
+    padding: 22px;
+
+}
+
+header nav a {
+    padding: 8px;
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    margin: 5px;
+}
+
+header nav a:hover {
+    color: white;
+    background-color: black;
+}
+footer a:hover {
+    color: white;
+    background-color: black;
+}
+
+section.about {
+    display: flex;
+    margin: 20px 20px;
+}
+
+.about-me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10%;
+}
+.about-me h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+.about-me a {
+    text-decoration: none;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    color: white;
+    background-color: black;
+    border: 1px solid black;
+    width: 90px;
+    height: 18px;
+    text-align: center;
+    padding: 5px;  
+}
+.about-me a:hover {
+    color: black;
+    background-color: white;
+}
+
+.about-me p {
+    margin-top: 10px;
+    line-height: 1.5;
+}
+.images {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: center;
+   
+}
+
+footer {
+    background-color: aquamarine;
+    margin-top: 25px;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    align-items: center;
+    justify-content: center;
+}
+
+footer h2 {
+    padding: 15px;
+}
+footer a {
+    text-decoration: none;
+    border: 1px solid black;
+    padding: 10px;
+    color:black;
+    background-color: white;
+}
+.footer-text {
+    margin-bottom: 15px;
+}
+
+
