--- a/style/index.css
+++ b/style/index.css
@@ -156,6 +156,29 @@ footer a {
 
 }
 
-@media (max-width: 500px) {
-    
+@media (max-width: 610px) {
+    header.home {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .links {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    section.about {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-me {
+        align-items: center;
+    }
+
+
+
+
+
+
 }
